Fix overflow issues with overlays on desktop

--- a/src/components/overlay/index.css
+++ b/src/components/overlay/index.css
@@ -246,8 +246,14 @@
   }
 
   .Overlay--01 {
+    & .Overlay-inner {
+      overflow: hidden;
+    }
+
     & .Overlay-title {
       line-height: 1.2;
+      max-width: 900px;
+      min-width: 900px;
     }
 
     & .Overlay-content {
@@ -315,6 +321,7 @@
       background-position: 0 6px;
       font-size: 26px;
       font-weight: 300;
+      margin-top: 20px;
       text-align: left;
     }
 
@@ -322,6 +329,7 @@
       background-size: 52px;
       font: 700 20px/28px var(--sans);
       letter-spacing: 0.08px;
+      margin-top: 40px;
       max-width: 610px;
       padding-top: 80px;
       text-transform: none;
